--- a/DataAccessLayer/ConnInfo.resx
+++ b/DataAccessLayer/ConnInfo.resx
@@ -112,10 +112,10 @@
     <value>2.0</value>
   </resheader>
   <resheader name="reader">
-    <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <resheader name="writer">
-    <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="Database" xml:space="preserve">
     <value>stemstudios_bos</value>
@@ -124,10 +124,10 @@
     <value>admin1234</value>
   </data>
   <data name="Port" xml:space="preserve">
-    <value>10001</value>
+    <value>3306</value>
   </data>
   <data name="Server" xml:space="preserve">
-    <value>beta.stemstudios.com</value>
+    <value>cc.stemstudios.com</value>
   </data>
   <data name="Username" xml:space="preserve">
     <value>clear-choice</value>
