--- a/DataAccessLayer/ConnInfo.resx
+++ b/DataAccessLayer/ConnInfo.resx
@@ -127,7 +127,7 @@
     <value>3306</value>
   </data>
   <data name="Server" xml:space="preserve">
-    <value>localhost</value>
+    <value>cc.stemstudios.com</value>
   </data>
   <data name="Username" xml:space="preserve">
     <value>clear-choice</value>
